# eb

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
client/src/transports/: mod.rs  tcp.rs
core/: Cargo.toml
core/src/: client.rs  lib.rs  server.rs
docs/: architecture.excalidraw  protocol.md
rpc/: Cargo.toml
rpc/src/: client.rs  lib.rs  server.rs
rpc/src/client/: mod.rs  ws.rs
rpc/src/jsonrpc/: mod.rs
rpc/src/server/: mod.rs  ws.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
term/: Cargo.toml
term/src/: app.rs  main.rs
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
wiem/: Cargo.toml
wiem/src/: app.rs
