[package]
name = "eb-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.28"
async-trait = "0.1.51"
eb-core = { path = "../core" }
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["net", "io-util"] }
url = "2.2.2"
bytes = "1.1.0"
