[package]
name = "eb-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
url = { version = "2.2.2", features = ["serde"] }
uuid = "0.8.2"
ropey = "1.3.2"
chronofold = { version = "0.4.0", features = ["serde"] }
strum = { version = "0.23.0", features = ["derive"] }

[features]
