[package]
name = "eb-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
jsonrpsee = { version = "0.3.1", features = ["macros"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["net"] }
url = { version = "2.2.2", features = ["serde"] }

[features]
client = ["jsonrpsee/client"]
server = ["jsonrpsee/server"]
