[package]
name = "eb-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
url = { version = "2.2.2", features = ["serde"] }

futures = "0.3.17"
tokio = { version = "1.12.0", optional = true }
tokio-tungstenite = { version = "0.15.0", optional = true, default-features = false, features = ["connect"] }

[features]
client = []
ws-client = ["client", "tokio/net", "tokio/sync", "tokio-tungstenite"]

server = []
