[package]
name = "eb-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bytes = "1.1.0"
eb-core = { path = "../core" }
ropey = "1.3.1"
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
