[package]
name = "eb-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acu = { version = "0.3.3", features = ["uuid"] }
anyhow = "1.0.44"
async-trait = "0.1.51"
bytes = "1.1.0"
chronofold = "0.4.0"
eb-core = { path = "../core" }
futures = "0.3.21"
ropey = "1.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
tokio-tungstenite = "0.17.0"
tracing = "0.1.28"
tracing-subscriber = "0.3.8"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4"] }

[features]
