[package]
name = "eb-term"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eb-core = { path = "../core" }
eb-client = { path = "../client" }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.44"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.21.0", features = ["event-stream"] }
futures = "0.3.17"
ropey = "1.3.1"
clap = "2.33.3"
url = "2.2.2"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
xdg = "2.2.0"
